# slidesite

./: .gitignore  Cargo.toml  README.md  download_highlight.sh  example.sd
src/: base_style.css  emitter.rs  homepage.html  main.js  main.rs  parser.rs  typechecker.rs
src/converter/: ast.rs  mod.rs
src/eval/: mod.rs  value.rs
src/parser/: ast.rs  mod.rs
src/typechecker/: find_types.rs  generate_constraints.rs  mod.rs  solve.rs
