[package]
name = "slidesite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.13"
maud = "0.24.0"
chumsky = "0.8.0"
ariadne = "0.1.5"
by_address = "1.0.4"
thiserror = "1.0.37"
convert_case = "0.6.0"
itertools = "0.10.5"
typed-arena = "2.0.1"
derivative = "2.2.0"

